Add GitHub Container Registry support and remove test files
- Add GitHub Actions workflow for automatic Docker image publishing
- Update docker-compose.yml to use ghcr.io image
- Simplify README.md with docker run command
- Remove test files: slides/, specs/, next-projects/, workspace/, *.pptx, *.xlsx
- Update .gitignore to exclude test files from future commits

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,15 @@ node_modules/
 
 # Docker
 scat
+
+# Test files
+slides/
+*.pptx
+*.xlsx
+create_presentation.js
+example_document_suite.py
+next-projects/
+workspace/
+
+# Specs (3GPP documents)
+specs/
