--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,10 @@ version: '3.8'
 
 services:
   dm-log-analyzer:
-    build: .
+    # GitHub Container Registry에서 이미지 pull
+    # 로컬 빌드를 원하면 아래 주석을 해제하고 image 라인을 주석 처리
+    image: ghcr.io/joostone-ahn/dm-log-analyzer:latest
+    # build: .
     container_name: dm-log-call-flow-analyzer
     ports:
       - "8080:8080"
