--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     # 로컬 빌드를 원하면 아래 주석을 해제하고 image 라인을 주석 처리
     image: ghcr.io/joostone-ahn/dm-log-analyzer:latest
     # build: .
+    platform: linux/amd64
     container_name: dm-log-analyzer
     ports:
       - "8080:8080"
